--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <form method="POST" action="/predict" class="container">
+                <form method="POST" id="prediction-form" action="/predict" class="container">
                     <div class="row py-2">
                         <label for="age" class="col-md-8 col-form-label">Age:</label>
                         <div class="col-md-4 d-flex align-items-center">
@@ -132,18 +132,18 @@
                 <!-- Result Display -->
                 <div id="result-area" class="p-3 ">
                     <h4>Prediction Result</h4>
-                    <p id="result-text" class="mt-3 text-muted">The prediction result will appear here after submission.</p>
+                    {% if probability %}
+                        <h3>Prediction: {{ probability }} - {{ message }}</h3>
+                        <p style="color: {{ color }}">{{ message }}</p>
+                     {% endif %}
                 </div>
                 <!-- Submit Button -->
-                <button type="submit" class="btn btn-primary align-self-start">Submit</button>
+                <button type="submit" class="btn btn-primary align-self-start" onclick="validateForm();">Submit</button>
             </div>
         </div>
     </div>
     
 
-    {% if probability %}
-        <h3>Prediction: {{ probability }} - {{ message }}</h3>
-        <p style="color: {{ color }};">{{ message }}</p>
-    {% endif %}
+    
 </body>
 </html>
