--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
     <title>Heart Disease Prediction</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/static/js/validation.js"></script>
+    <script src="/static/js/resultChart.js"></script>
 </head>
 <body class="container">
     <div class="container my-4">
@@ -131,10 +133,15 @@
             <div id="result-window" class="col-md-6 border rounded shadow-sm mt-3 mt-md-0">
                 <!-- Result Display -->
                 <div id="result-area" class="p-3 ">
-                    <h4>Prediction Result</h4>
+                    <div class="row">
+                        <h2 class="col text-center">Prediction Result</h4>
+                            <hr>
+                    </div>
+                    <canvas id="resultChart" style="width: 100%; height: 400px;"></canvas>
                     {% if probability %}
                         <h3>Prediction: {{ probability }} - {{ message }}</h3>
                         <p style="color: {{ color }}">{{ message }}</p>
+                        <canvas id="resultChart" style="width: 100%; height: 400px;"></canvas>
                      {% endif %}
                 </div>
                 <!-- Submit Button -->
