--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,17 @@
     <link href="/static/css/custom.css" rel="stylesheet">
     <title>Heart Disease Prediction</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.1.0/dist/chartjs-plugin-annotation.min.js"></script>
     <script src="/static/js/validation.js"></script>
-    <script src="/static/js/resultChart.js"></script>
+    <script src="/static/js/chartGen.js"></script>
+    <script src="/static/js/randomVal.js"></script>
 </head>
 <body class="container">
-    <div class="container my-4">
+    <div class="container my-2">
         <div class="row">
-            <h1 id="banner" class="col text-center">Heart Disease Prediction ML</h1>
+            <div class="col-xl-12">
+                <h1 id="banner">Heart Disease Prediction ML</h1>
+            </div>
         </div>
     </div>
 
@@ -23,7 +27,7 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-xl-6">
                 <form method="POST" id="prediction-form" action="/predict" class="container">
                     <div class="row py-2">
                         <label for="age" class="col-md-8 col-form-label">Age:</label>
@@ -130,27 +134,58 @@
                     </div>
                 </form>
             </div>
-            <div id="result-window" class="col-md-6 border rounded shadow-sm mt-3 mt-md-0">
+            <div id="result-window" class="col-xl-6 mt-3 mt-xl-0">
                 <!-- Result Display -->
-                <div id="result-area" class="p-3 ">
-                    <div class="row">
-                        <h2 class="col text-center">Prediction Result</h4>
+                <div id="result-area" class="container p-3">
+                    <div class="container">
+                        <div class="row">
+                            <h2 class="col text-center">Prediction Result</h2>
                             <hr>
+                        </div>
                     </div>
-                    <canvas id="resultChart" style="width: 100%; height: 400px;"></canvas>
-                    {% if probability %}
-                        <h3>Prediction: {{ probability }} - {{ message }}</h3>
-                        <p style="color: {{ color }}">{{ message }}</p>
-                        <canvas id="resultChart" style="width: 100%; height: 400px;"></canvas>
-                     {% endif %}
+                    <div class="container d-flex flex-column " id="result-display" style="width: 100%; height: 156px;">
+                        <div class="row ">
+                            <h4 style="background-color: rgba(153, 230, 244, 0.917); border-top-right-radius: 10px; border-top-left-radius: 10px;">Risk Factor (0-1)</h3>
+                        </div>
+                        <div  class="row align-items-center">
+                            {% if probability %}            
+                                <p id="result">{{ probability|round(2) }}</p>
+                            {% else %}
+                                <p style="color:#003366; font-size: 2rem;">Complete value entry and press "Submit" for result</h4>
+                            {% endif %}
+                        </div>
+                        <div class="row align-items-center" style="font-size: medium;">
+                            {% if probability %}            
+                                <p id="result-msg" style="color: {{ color }};">{{ message }}</p>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="container my-xl-5">
+                        <div class="row my-xl-3">
+                            <p style="text-align: center;">Resting Blood Pressure (mm/Hg)</p>
+                            <canvas style="text-align: center;" id="rbpChart" width="100%" height="10%"></canvas>
+                        </div>
+                        <div class="row my-xl-3">
+                            <p style="text-align: center;">Serum Cholesterol (mg/dl)</p>
+                            <canvas id="cholChart" width="100%" height="10%"></canvas>
+                        </div>
+                        <div class="row my-xl-3">
+                            <p style="text-align: center;">Maximum Heart Rate (bpm)</p>
+                            <canvas id="mhrChart" width="100%" height="10%"></canvas>
+                        </div>
+                    </div>
+            
+                    
                 </div>
-                <!-- Submit Button -->
-                <button type="submit" class="btn btn-primary align-self-start" onclick="validateForm();">Submit</button>
+                <div class="container">
+                    <div class="col-12 d-flex justify-content-between">
+                        <button type="submit" id="randoButton" style="width: 50%;" class="btn btn-primary flex-fill mx-1" onclick="fillRandomValues();">Randomize Values</button>
+                        <button type="submit" style="width: 50%;" class="btn btn-primary flex-fill mx-1" onclick="validateForm();">Submit</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    
-
-    
 </body>
 </html>
